--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -26,14 +26,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="100dp"
             android:background="#e8e9cf"
             android:orientation="vertical"
             android:padding="18dp"
-            android:weightSum="8">
+            android:weightSum="9"
+            android:layout_below="@+id/appbar"
+            android:layout_centerHorizontal="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Time" />
+                    android:text="Time In" />
 
                 <TextView
                     android:id="@+id/Dtime"
@@ -135,7 +133,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Veh Reg No." />
+                    android:text="No. Plat" />
 
                 <TextView
                     android:id="@+id/Dnumber"
@@ -211,7 +209,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Location" />
+                    android:text="Zone" />
 
                 <TextView
                     android:id="@+id/Dlocation"
