--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -6,19 +6,47 @@
     android:layout_height="match_parent"
     android:background="#29568f"
     tools:context="com.codextech.ibtisam.lepak_app.activity.TicketFormatActivity">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
     <EditText
-        android:id="@+id/etCarNumber"
-        android:layout_width="match_parent"
+        android:id="@+id/edAlpha"
+        android:layout_width="80dp"
         android:layout_height="50dp"
+        android:background="#FFF"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="LWZ"
+        android:inputType="textCapCharacters"
+        android:textColorHint="#FFC9CACA"
+        android:textSize="30dp" />
+    <EditText
+        android:id="@+id/edYear"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:background="#FFF"
+        android:ems="10"
+        android:inputType="text"
+        android:gravity="center"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:background="#FFF"
-        android:gravity="center"
-        android:hint="Enter number"
-        android:inputType="number"
+        android:hint="17A"
+        android:textColorHint="#FFC9CACA"
         android:textSize="30dp" />
+    <EditText
+        android:id="@+id/edNum"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:background="#FFF"
+        android:ems="10"
+        android:inputType="number"
+        android:gravity="center"
+        android:hint="999"
+        android:textColorHint="#FFC9CACA"
+        android:textSize="30dp" />
+</LinearLayout>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -140,7 +168,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Veh Reg No." />
+                    android:text="No. Plate" />
 
                 <TextView
                     android:id="@+id/tvNumber"
