lepak 35........Summary tickets Print wityh zone and site name,

--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -21,7 +21,8 @@
             android:ems="10"
             android:gravity="center"
             android:hint="LWZ"
-           android:inputType="textCapCharacters"
+            android:imeOptions="actionNext"
+           android:inputType="textCapWords"
             android:textColorHint="#FFC9CACA"
             android:textSize="30dp" />
         <EditText
@@ -31,6 +32,7 @@
             android:background="#FFF"
             android:ems="10"
            android:inputType="text"
+            android:imeOptions="actionNext"
             android:gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
@@ -43,6 +45,7 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
+            android:imeOptions="actionNext"
             android:inputType="number"
             android:gravity="center"
             android:hint="999"
