--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -105,7 +105,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="4">
@@ -159,7 +159,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="4">
@@ -213,7 +213,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="4">
@@ -267,7 +267,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:padding="5dp"
             android:weightSum="4">
@@ -321,7 +321,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -375,6 +375,15 @@
 
 
         </LinearLayout>
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Print Summary"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/btPrintSummary"/>
     </LinearLayout>
 
     <!--<LinearLayout-->
