--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -19,10 +19,10 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
+            android:nextFocusRight="@+id/enterYear"
             android:gravity="center"
             android:hint="LWZ"
-            android:imeOptions="actionNext"
-           android:inputType="textCapWords"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:textColorHint="#FFC9CACA"
             android:textSize="30dp" />
         <EditText
@@ -31,8 +31,7 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
-           android:inputType="text"
-            android:imeOptions="actionNext"
+            android:nextFocusRight="@+id/enterNum"
             android:gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
@@ -45,7 +44,7 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
-            android:imeOptions="actionNext"
+
             android:inputType="number"
             android:gravity="center"
             android:hint="999"
