--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -16,9 +16,9 @@
         <item
             android:id="@+id/nav_NfcActvity"
             android:title="NFC Detection" />
-        <item
-            android:id="@+id/nav_BlockUser"
-            android:title="Block" />
+        <!--<item-->
+            <!--android:id="@+id/nav_BlockUser"-->
+            <!--android:title="Block" />-->
     </group>
 
     <item
