--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,27 +51,27 @@
             </LinearLayout>
 
 
-<Button
-    android:layout_width="285dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="17dp"
-    android:id="@+id/btok"
-    android:background="#29568f"
-    android:textColor="#FFF"
-    android:text="Select User Name"/>
-            <EditText
-                android:id="@+id/edSiteName"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="20dp"
-                android:background="#29568f"
-                android:drawableLeft="@drawable/lettericon"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/lettericon"
-                android:hint="Email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:textColorHint="#FFF" />
+<!--<Button-->
+    <!--android:layout_width="285dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="17dp"-->
+    <!--android:id="@+id/btok"-->
+    <!--android:background="#29568f"-->
+    <!--android:textColor="#FFF"-->
+    <!--android:text="Select User Name"/>-->
+            <!--<EditText-->
+                <!--android:id="@+id/edSiteName"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:background="#29568f"-->
+                <!--android:drawableLeft="@drawable/lettericon"-->
+                <!--android:drawablePadding="10dp"-->
+                <!--android:drawableStart="@drawable/lettericon"-->
+                <!--android:hint="Email"-->
+                <!--android:imeOptions="actionNext"-->
+                <!--android:inputType="textEmailAddress"-->
+                <!--android:textColorHint="#FFF" />-->
 
             <EditText
                 android:id="@+id/password"
