--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -31,6 +31,7 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
+            android:inputType="text"
             android:nextFocusRight="@+id/enterNum"
             android:gravity="center"
             android:layout_marginLeft="5dp"
@@ -44,7 +45,6 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
-
             android:inputType="number"
             android:gravity="center"
             android:hint="999"
