--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -6,58 +6,14 @@
     android:layout_height="match_parent"
     android:background="#29568f"
     tools:context="com.codextech.ibtisam.lepak_app.activity.TicketFormatActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center">
-    <EditText
-        android:id="@+id/edAlpha"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:background="#FFF"
-        android:ems="10"
-        android:gravity="center"
-        android:imeOptions="actionNext"
-        android:hint="LWZ"
-        android:inputType="textCapWords"
-        android:textColorHint="#FFC9CACA"
-        android:textSize="30dp" />
-    <EditText
-        android:id="@+id/edYear"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        android:background="#FFF"
-        android:ems="10"
-        android:inputType="text"
-        android:imeOptions="actionNext"
-        android:gravity="center"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:hint="17A"
-        android:textColorHint="#FFC9CACA"
-        android:textSize="30dp" />
-    <EditText
-        android:id="@+id/edNum"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:background="#FFF"
-        android:imeOptions="actionNext"
-        android:ems="10"
-        android:inputType="number"
-        android:gravity="center"
-        android:hint="999"
-        android:textColorHint="#FFC9CACA"
-        android:textSize="30dp" />
-</LinearLayout>
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="105dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/cardView"
         android:background="#e8e9cf"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="5dp">
@@ -270,6 +226,53 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="50dp"
+        android:layout_alignBottom="@id/btnPrintMix"
+        android:gravity="center">
+        <EditText
+            android:id="@+id/edAlpha"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:background="#FFF"
+            android:ems="10"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:hint="LWZ"
+            android:inputType="textCapWords"
+            android:textColorHint="#FFC9CACA"
+            android:textSize="30dp" />
+        <EditText
+            android:id="@+id/edYear"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:background="#FFF"
+            android:ems="10"
+            android:inputType="text"
+            android:imeOptions="actionNext"
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:hint="17A"
+            android:textColorHint="#FFC9CACA"
+            android:textSize="30dp" />
+        <EditText
+            android:id="@+id/edNum"
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:background="#FFF"
+            android:imeOptions="actionNext"
+            android:ems="10"
+            android:inputType="number"
+            android:gravity="center"
+            android:hint="999"
+            android:textColorHint="#FFC9CACA"
+            android:textSize="30dp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnPrintMix"
