--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -265,6 +265,7 @@
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -382,6 +383,7 @@
             android:layout_height="wrap_content"
             android:text="Print Summary"
             android:gravity="center"
+            android:background="#ffee24"
             android:layout_gravity="center"
             android:id="@+id/btPrintSummary"/>
     </LinearLayout>
