--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -234,42 +234,42 @@
         android:layout_marginBottom="50dp"
         android:layout_alignBottom="@id/btnPrintMix"
         android:gravity="center">
-        <EditText
-            android:id="@+id/edAlpha"
-            android:layout_width="80dp"
-            android:layout_height="50dp"
-            android:background="#FFF"
-            android:ems="10"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:hint="LWZ"
-            android:inputType="textCapWords"
-            android:textColorHint="#FFC9CACA"
-            android:textSize="30dp" />
-        <EditText
-            android:id="@+id/edYear"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:background="#FFF"
-            android:ems="10"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:hint="17A"
-            android:textColorHint="#FFC9CACA"
-            android:textSize="30dp" />
+        <!--<EditText-->
+            <!--android:id="@+id/edAlpha"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:background="#FFF"-->
+            <!--android:ems="10"-->
+            <!--android:gravity="center"-->
+            <!--android:imeOptions="actionNext"-->
+            <!--android:hint="LWZ"-->
+            <!--android:inputType="textCapWords"-->
+            <!--android:textColorHint="#FFC9CACA"-->
+            <!--android:textSize="30dp" />-->
+        <!--<EditText-->
+            <!--android:id="@+id/edYear"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:background="#FFF"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="text"-->
+            <!--android:imeOptions="actionNext"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:hint="17A"-->
+            <!--android:textColorHint="#FFC9CACA"-->
+            <!--android:textSize="30dp" />-->
         <EditText
             android:id="@+id/edNum"
-            android:layout_width="80dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#FFF"
             android:imeOptions="actionNext"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="text"
             android:gravity="center"
-            android:hint="999"
+            android:hint="LGH999"
             android:textColorHint="#FFC9CACA"
             android:textSize="30dp" />
     </LinearLayout>
