--- a/app/src/main/res/drawable-mdpi/selector_xml_btn.xml
+++ b/app/src/main/res/drawable-mdpi/selector_xml_btn.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <solid android:color="#2c416e" />
+            <solid android:color="#080808" />
         </shape>
     </item>
 
