--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -9,16 +9,18 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabBackground="@drawable/tab_color_selector"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        app:tabBackground="@color/colorPrimary"
         app:tabGravity="fill"
-        app:tabIndicatorColor="#ffee24"
-        app:tabIndicatorHeight="7dp"
+        app:tabIndicatorColor="#090a09"
+        app:tabIndicatorHeight="5dp"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/white"
-        app:tabTextColor="@color/white"></android.support.design.widget.TabLayout>
+        app:tabSelectedTextColor="#090a09"
+        app:tabTextColor="#3c403c"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"/>
 </LinearLayout>
