>print ticket buttons gone >edittext check

--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -45,7 +45,8 @@
             android:layout_height="50dp"
             android:background="#FFF"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textCapCharacters"
+            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890"
             android:gravity="center"
             android:hint="LHG999"
             android:textColorHint="#FFC9CACA"
