>complete edit text

--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -44,9 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#FFF"
-            android:ems="10"
-            android:inputType="textCapCharacters"
-            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890"
+            android:inputType="textVisiblePassword"
             android:gravity="center"
             android:hint="LHG999"
             android:textColorHint="#FFC9CACA"
